<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">有需有贷</string>
    <string name="wait_finish_attest" tools:ignore="TypographyEllipsis">
        您的申请已受理，通过后会第一时间通知您,请耐心等候...</string>
    <string name="permission_message_permission_failed">我们需要的一些权限被您拒绝或者系统发生错误申请失败，请您到设置页面手动授权，否则功能无法正常使用！</string>
    <string name="footer_text">渗透力金融旗下信贷平台</string>
    <string name="tips_title">温馨提示</string>
    <string name="tips_habit">·良好的信用习惯,避免逾期出现，可提高额度申请成功率</string>
    <string name="tips_office">·不要轻易相信非官方客服说法</string>
    <string name="back_text">返回</string>
    <string name="money_symbol">￥</string>
    <string name="max_can_loan">最高可借</string>
    <string name="yuan">元</string>
    <string name="next_step">下一步</string>
    <string name="dialog_title">提示</string>
    <string name="explain_text">使用说明</string>
    <string name="qi">期</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_file_too_big">文件过大</string>
    <string name="advantage_1">利率透明</string>
    <string name="advantage_2">高效审批</string>
    <string name="advantage_3">高效审批</string>
    <string name="user_max_quota">您当前最高可借额度(元)</string>
    <string name="max_quota">最高可借额度(元)</string>
    <string name="should_repay">本期应还(元)</string>
    <string name="day_rate_low">日费用最底</string>
    <string name="normal_term">期限(月)</string>
    <string name="repay_day">还款日</string>
    <string name="loan_money">我要借钱</string>
    <string name="repay_now">立即还款</string>
    <string name="app_use_explain">有需有贷使用说明</string>
    <string name="app_use_explain_tips">简单明了，了解平台使用规规则</string>
    <string name="loan_tips">借款指南</string>
    <string name="replay_tips">还款指南</string>
    <string name="quota_tips">还款指南</string>
    <string name="tips_more">点击查看详情</string>
    <string name="audit_failed">审核未通过</string>
    <string name="audit_success">审核通过</string>
    <string name="version_unknown">未知版本</string>
    <string name="fixed_amount">您当前为固定额度，不可输入金额</string>
    <string name="fixed_tips">注:固定额度借款只可调整金额用处和银行卡选择</string>
    <string name="not_fixed_amount">您可以自行输入金额，必须为100的倍数</string>
    <string name="choose_text">请选择</string>
    <string name="no_plan">暂无还款计划</string>
    <string name="how_use">怎么用</string>
    <string name="how_long">借多久</string>
    <string name="how_repay">怎么还</string>
    <string name="repay_plan">还款计划</string>
    <string name="get_money_bank">收款银行</string>
    <string name="lender">出借方</string>
    <string name="equal_installments">等额本息</string>
    <string name="first_repay">首期应还</string>
    <string name="loan_less_symbol">-</string>
    <string name="credit_report">信用报告</string>
    <string name="user_credit_report">个人信用报告</string>
    <string name="report_explain">(借款到账后有场景消费代理公司立即代扣)</string>
    <string name="user_report_explain">(购买个人信用报告后，根据短信提示登入指定 后台，查收个人专属信用报告)</string>
    <string name="contact_title">完善您的申请信息</string>
    <string name="contact_input_text">请输入紧急联系人</string>
    <string name="input_text_hint">请输入姓名</string>
    <string name="contact_input_relation">与本人关系</string>
    <string name="input_relation_hint">例如 父亲/母亲/妻子</string>
    <string name="phone_number_text">手机号码</string>
    <string name="contact_permission_hint">此项需允许获取通讯录</string>
    <string name="pay_test">收入信息</string>
    <string name="now_profession">目前职业</string>
    <string name="login_title">登录/注册</string>
    <string name="phone_hint">请输入正确手机号</string>
    <string name="code_hint">请输入验证码</string>
    <string name="forgot_phone_hint_step_1_error">请输入正确的手机号码</string>
    <string name="forgot_code_hint_step_1_error">请输入正确的验证码</string>
    <string name="login_protocol_first">点击下一步代表已经阅读并同意</string>
    <string name="login_protocol_second">以及</string>
    <string name="login_protocol_details_first">《用户协议》</string>
    <string name="login_protocol_details_second">《保护隐私声明》</string>
    <string name="bank_verify_send_code">获取验证码</string>
    <string name="add_your_card" translatable="false">添加你的银行卡</string>
    <string name="get_your_quota">快速领取您的申请额度</string>
    <string name="credit_person_tips">身份认证信息保存后无法修改，请务必保证正确</string>
    <string name="save">保存</string>
    <string name="credit_security">银行级数据加密保护</string>
    <string name="credit_person">身份认证</string>
    <string name="credit_face">人脸识别</string>
    <string name="credit_name">姓名    </string>
    <string name="credit_id">身份证  </string>
    <string name="credit_auto">通过身份证自动识别</string>
    <string name="credit_education">学历</string>
    <string name="select_credit_education">请选择学历</string>
    <string name="credit_address">现居地址</string>
    <string name="credit_details_address">请输入详细地址</string>
    <string name="select_credit_address">请选择现居地址</string>
    <string name="login">登录</string>
    <string name="mine">我的</string>
    <string name="logo_now">立即登录</string>
    <string name="login_advantage">领取贷款额度吧</string>
    <string name="mine_record_text">借款记录</string>
    <string name="mine_details_text">完善资料</string>
    <string name="mine_bank_text">银行卡</string>
    <string name="mine_help_text">客服中心</string>
    <string name="mine_setting">设置</string>
    <string name="strategy">攻略</string>
    <string name="hot_information">热点资讯</string>
    <string name="repay_no_record">您现在没有要还的款项哦~</string>
    <string name="apply_now">马上申请</string>
    <string name="repay_tips">我们会在还款日当天12:00开始自动扣款，请确保余额、储蓄卡余额宝账户资金充足。</string>
    <string name="repay_plan_title">还款计划</string>
    <string name="repay_type">支持多种还款方式，方便快捷</string>
    <string name="repay_active">银行卡转账</string>
    <string name="repay_self_motion">自动还款</string>
    <string name="repay_zfb">支付宝转账</string>
    <string name="repay_quick1">快捷还款</string>
    <string name="repay_quick2">转账还款</string>
    <string name="repay_look_protocol">查看协议</string>
    <string name="repay_normal_money_text">本金:</string>
    <string name="repay_normal_rate_text">利息:</string>
    <string name="repay_normal_term_text">分期手续费:</string>
    <string name="repay_normal_overdue_text">逾期费用:</string>
    <string name="retract">收起</string>
    <string name="open">展开</string>
    <string name="loan_next_text">点击下一步即表示您已经同意</string>
    <string name="loan_protocol_lists">借款等相关协议</string>
    <string name="every_stage_return">每期还</string>
    <string name="mine_settings_title">设置</string>
    <string name="mine_settings_about">关于我们</string>
    <string name="mine_settings_about_version">当前版本</string>
    <string name="mine_settings_idea">意见反馈</string>
    <string name="mine_settings_idea_tip1">请输入您的反馈意见,我们会为您不断进步。</string>
    <string name="mine_settings_idea_tip2">160/160</string>
    <string name="mine_settings_idea_tip3">客服工作时间</string>
    <string name="mine_settings_idea_tip4">9:00 ~ 18:00</string>
    <string name="mine_settings_idea_submit">提交</string>
    <string name="mine_settings_update_pwd">修改登录密码</string>
    <string name="mine_settings_update_pwd_forget">忘记</string>
    <string name="mine_settings_set_pwd">设置交易密码</string>
    <string name="mine_settings_update_paypaw">修改交易密码</string>
    <string name="mine_settings_exit">退出登录</string>
    <string name="settings_pwd_title">修改登录密码</string>
    <string name="seetings_pwd_tips">两次输入的密码不一致</string>
    <string name="seetings_pwd_reset">重新设置</string>
    <string name="seetings_pwd_again">再试一次</string>
    <string name="settings_pwd_forget">忘记</string>
    <string name="settings_pwd_pwd">原密码</string>
    <string name="settings_pwd_pwd_hint">请输入原密码</string>
    <string name="settings_pwd_new_pwd">新密码</string>
    <string name="settings_pwd_new_pwd_hint">请输入新密码</string>
    <string name="settings_pwd_confirm_pwd">确认新密码</string>
    <string name="settings_pwd_confirm_pwd_hint">请确认新密码</string>
    <string name="settings_pwd_desc">登录密码为6&#8211;16位字符，包括数字和字母</string>
    <string name="settings_pwd_sub">完成</string>
    <string name="settints_pay_update_new_title">新交易密码</string>
    <string name="settints_pay_update_old_pwd_error">原交易密码错误</string>
    <string name="settints_pay_update_new_tips">请输入6位交易密码</string>
    <string name="settints_pay_update_confirm_title">确认交易密码</string>
    <string name="settints_pay_update_confirm_tips">请确认6位交易密码</string>
    <string name="settints_pay_success">设置交易密码成功!</string>
    <string name="settints_pay_set_tips">请输入6位交易密码</string>
    <string name="settints_pay_update_tips">请输入您的原交易密码</string>
    <string name="settings_forgot_pay_title">找回交易密码</string>
    <string name="settings_forgot_pay_phone">手机号码</string>
    <string name="settings_forgot_pay_name">真实姓名</string>
    <string name="settings_forgot_pay_no">身份证号</string>
    <string name="settings_forgot_pay_code">短信验证码</string>
    <string name="settings_forgot_pay_phone_tip">请填写手机号码</string>
    <string name="settings_forgot_pay_name_tip">请填写真实姓名</string>
    <string name="settings_forgot_pay_name_not_chinese">真实姓名仅为中文</string>
    <string name="settings_forgot_pay_no_tip">请填写身份证号</string>
    <string name="settings_forgot_pay_code_tip">请输入短信验证码</string>
    <string name="credit_bank_title">添加银行卡</string>
    <string name="credit_bank_again_title">重新绑定银行卡</string>
    <string name="credit_bank_title_bind">已绑银行卡</string>
    <string name="credit_bank_tips">添加您的银行卡用于收款</string>
    <string name="credit_bank_tips1">请填写银行卡信息</string>
    <string name="bank_name">持卡人</string>
    <string name="person_name_hint">通过身份证识别自动填充</string>
    <string name="bank_select_bank">选择银行</string>
    <string name="bank_select_bank_hint">请选择银行</string>
    <string name="bank_card_no">卡号</string>
    <string name="bank_card_no_hint">请输入银行卡号</string>
    <string name="bank_card_no_error">请输入正确的卡号</string>
    <string name="bank_phone">手机号</string>
    <string name="bank_phone_hint">请输入银行预留手机号</string>
    <string name="bank_phone_toast">请输入正确的手机号</string>
    <string name="bank_verify_code">验证码</string>
    <string name="repay_bank_verify_send_code">还款确认</string>
    <string name="bank_verify_code_hint">请输入验证码</string>
    <string name="bank_belong">所属银行</string>
    <string name="bank_bank_card">银行卡号</string>
    <string name="bank_bank_phone">预留手机号</string>
    <string name="bank_success_tips"></string>
    <string name="bank_bind_again">重新绑卡</string>
    <string name="auth_sms_submit">验证</string>
    <string name="auth_sms_bank_titlet">验证银行卡</string>
    <string name="user_login_out">确定要登出?</string>
    <string name="user_login_two">你的账号已在其他设备登录，如非本人操作请及时修改密码</string>
    <string name="user_login_reset">重新登录</string>
    <string name="credit_person_title">个人信息</string>
    <string name="credit_face_toast">请进行人脸识别</string>
    <string name="credit_id_card_toast">请进行身份证识别</string>
    <string name="credit_name_toast">请填写真实姓名</string>
    <string name="credit_card_no_toast">请填写身份证号</string>
    <string name="credit_confirm_toast">请再次确认您的身份信息\n\n姓名：%1$s \n身份证号：%2$s</string>
    <string name="credit_back_update">返回修改</string>
    <string name="credit_confirm_submit">确认提交</string>
    <string name="credit_scan_error_tips">今日操作过于频繁，请明日再试</string>
    <string name="person_face">人脸识别</string>
    <string name="person_face_four">人脸注册</string>
    <string name="person_card">身份证识别</string>
    <string name="person_name">姓名</string>
    <string name="person_card_no_hint">通过身份证识别自动填充</string>
    <string name="person_card_no">身份证</string>
    <string name="person_education">学历</string>
    <string name="person_education_hint">请选择学历</string>
    <string name="person_address_now">现居地址</string>
    <string name="person_address_now_toast">请选择现居地址</string>
    <string name="person_address_now_hint">请填写具体街道门牌号</string>
    <string name="person_marriage">婚姻状态</string>
    <string name="person_marriage_hint">请选择婚姻状态</string>
    <string name="person_live_time">居住时长</string>
    <string name="person_first">请先完成个人信息认证</string>
    <string name="identity_work_type">请选择工作类型</string>
    <string name="identity_work_salary">请填写工收入信息</string>
    <string name="linker_permission_error">权限获取失败，请允许通讯录权限！</string>
</resources>